--- a/App/pom.xml
+++ b/App/pom.xml
@@ -30,5 +30,12 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+
     </dependencies>
 </project>
