--- a/App/pom.xml
+++ b/App/pom.xml
@@ -36,6 +36,12 @@
             <version>1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>3.3</version>
+        </dependency>
+
 
     </dependencies>
 </project>
